--- a/_notebooks/2023-10-04-sprite.ipynb
+++ b/_notebooks/2023-10-04-sprite.ipynb
@@ -180,7 +180,7 @@
     "        const SPRITE_WIDTH = 64;  // matches sprite pixel width\n",
     "        const SPRITE_HEIGHT = 64; // matches sprite pixel height\n",
     "        const SCALE_FACTOR = 4;  // control size of sprite on canvas\n",
-    "        const FRAME_LIMIT = 2;  // number of frames per row, this code assume each row is same\n",
+    "        const FRAME_LIMIT = 13;  // number of frames per row, this code assume each row is same\n",
     "        // const FRAME_RATE = 15;  // not used\n",
     "\n",
     "        canvas.width = SPRITE_WIDTH * SCALE_FACTOR;\n",
@@ -264,7 +264,9 @@
     "\n",
     "            // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,\n",
     "            // ensuring smooth visuals.\n",
-    "            requestAnimationFrame(animate);\n",
+    "            setTimeout(function() {\n",
+    "                requestAnimationFrame(animate);\n",
+    "            }, 1000 / framesPerSecond);\n",
     "        }\n",
     "\n",
     "        // run 1st animate\n",
