altered minigame rules

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -9,7 +9,7 @@ comments: True
 ---
 
 **Directions**  
-Link is jumping on the trampoline! Press the left arrow to make Link turn left. Press the right arrow to make Link turn right. Press the up arrow to make Link turn backward. Press the down arrow to make Link spin!
+Freeplay with Link! Use the right arrow to make him move right, use the left arrow to make him move left, and use the space bar to jump.  
 
 <!DOCTYPE html>
 <html>
