changed game descriptions

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Rhythm Jump Minigame -- Air Choreo!
+title: Freeplay Minigame!
 description: Jump with Link!
 author: Katelyn Gelle, Gabriel Gravin, Kaden Vo, Daisy Zhang
 courses: {'compsci': {'week': 6}}
@@ -14,7 +14,7 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Air Choreo!</title>
+    <title>Freeplay Minigame!</title>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
