--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -41,12 +41,6 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         const jumpStrength = -10;
         let isJumping = false;
 
-        // Define the source rectangle for the sprite
-        const spriteSourceX = 0; // X coordinate of the top-left corner of the sprite in the sprite sheet
-        const spriteSourceY = 0; // Y coordinate of the top-left corner of the sprite in the sprite sheet
-        const spriteWidth = 96; // Width of the sprite in the sprite sheet
-        const spriteHeight = 104; // Height of the sprite in the sprite sheet
-
         // Game loop
         function gameLoop() {
             // Clear the canvas
@@ -60,14 +54,14 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
             spriteY += spriteVelocityY;
 
             // Check if the sprite has landed
-            if (spriteY >= canvas.height - spriteHeight) {
-                spriteY = canvas.height - spriteHeight;
+            if (spriteY >= canvas.height - spriteImage.height) {
+                spriteY = canvas.height - spriteImage.height;
                 spriteVelocityY = 0;
                 isJumping = false;
             }
 
-            // Draw the sprite with the specified source rectangle
-            ctx.drawImage(spriteImage, spriteSourceX, spriteSourceY, spriteWidth, spriteHeight, spriteX, spriteY, spriteWidth, spriteHeight);
+            // Draw the sprite
+            ctx.drawImage(spriteImage, spriteX, spriteY);
 
             requestAnimationFrame(gameLoop);
         }
