--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -19,54 +19,41 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
     <script>
-        // Get the canvas and its 2D rendering context
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
-        // Load the background image
         const backgroundImage = new Image();
         backgroundImage.src = '/student/images/park.jpg';
 
-        // Load the sprite image
         const spriteImage = new Image();
         spriteImage.src = '/student/images/linksprites.png';
 
-        // Initial sprite position and velocity
         let spriteX = 100;
         let spriteY = canvas.height - spriteImage.height;
         let spriteVelocityY = 0;
 
-        // Constants for jump behavior
         const gravity = 0.5;
         const jumpStrength = -10;
         let isJumping = false;
 
-        // Game loop
         function gameLoop() {
-            // Clear the canvas
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Draw the background image
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
 
-            // Update the sprite position based on gravity
             spriteVelocityY += gravity;
             spriteY += spriteVelocityY;
 
-            // Check if the sprite has landed
             if (spriteY >= canvas.height - spriteImage.height) {
                 spriteY = canvas.height - spriteImage.height;
                 spriteVelocityY = 0;
                 isJumping = false;
             }
 
-            // Draw the sprite
             ctx.drawImage(spriteImage, spriteX, spriteY);
 
             requestAnimationFrame(gameLoop);
         }
 
-        // Handle player input (e.g., jump)
         window.addEventListener('keydown', (event) => {
             if (event.key === ' ' && !isJumping) {
                 spriteVelocityY = jumpStrength;
@@ -76,8 +63,9 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
 
         // Wait for both images to load
         backgroundImage.onload = () => {
+            console.log("Background image loaded");  // Add a console log to check if the background image loads
             spriteImage.onload = () => {
-                // Start the game loop after both images are loaded
+                console.log("Sprite image loaded");      // Add a console log to check if the sprite image loads
                 gameLoop();
             };
         };
