fixed it so it shows few sprites not entire sheet

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -14,61 +14,90 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Freeplay Minigame!</title>
+    <title>Flip or Freeze!</title>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
     <script>
+        // Get the canvas and its 2D rendering context
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
+        // Load the background image
         const backgroundImage = new Image();
         backgroundImage.src = '/student/images/park.jpg';
 
+        // Load the sprite image
         const spriteImage = new Image();
         spriteImage.src = '/student/images/linksprites.png';
 
+        // Define sprite properties
+        const spriteWidth = 96; // Width of a single sprite frame
+        const spriteHeight = 104; // Height of a single sprite frame
+        let currentFrame = 0; // Current frame index
+        let frameCount = 5; // Total number of frames in the sprite sheet
+
+        // Initial sprite position and velocity
         let spriteX = 100;
-        let spriteY = canvas.height - spriteImage.height;
+        let spriteY = canvas.height - spriteHeight;
         let spriteVelocityY = 0;
 
+        // Constants for jump behavior
         const gravity = 0.5;
         const jumpStrength = -10;
         let isJumping = false;
 
+        // Function to update sprite animation
+        function updateSpriteAnimation() {
+            currentFrame = (currentFrame + 1) % frameCount;
+        }
+
+        // Game loop
         function gameLoop() {
+            // Clear the canvas
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw the background image
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
 
+            // Update the sprite position based on gravity
             spriteVelocityY += gravity;
             spriteY += spriteVelocityY;
 
-            if (spriteY >= canvas.height - spriteImage.height) {
-                spriteY = canvas.height - spriteImage.height;
+            // Check if the sprite has landed
+            if (spriteY >= canvas.height - spriteHeight) {
+                spriteY = canvas.height - spriteHeight;
                 spriteVelocityY = 0;
                 isJumping = false;
             }
 
-            ctx.drawImage(spriteImage, spriteX, spriteY);
+            // Draw the current sprite frame
+            ctx.drawImage(
+                spriteImage,
+                currentFrame * spriteWidth, // Adjust the X-coordinate of the frame within the sprite sheet
+                0, // The Y-coordinate within the sprite sheet (assuming Y is always 0 for frames)
+                spriteWidth, // Width of the frame
+                spriteHeight, // Height of the frame
+                spriteX, // X-coordinate where the frame is drawn on the canvas
+                spriteY, // Y-coordinate where the frame is drawn on the canvas
+                spriteWidth, // Width of the frame when drawn on the canvas
+                spriteHeight // Height of the frame when drawn on the canvas
+            );
+
+            // Handle jumping
+            if (!isJumping) {
+                spriteVelocityY = jumpStrength;
+                isJumping = true;
+            }
+
+            // Update sprite animation
+            updateSpriteAnimation();
 
             requestAnimationFrame(gameLoop);
         }
 
-        window.addEventListener('keydown', (event) => {
-            if (event.key === ' ' && !isJumping) {
-                spriteVelocityY = jumpStrength;
-                isJumping = true;
-            }
-        });
-
-        // Wait for both images to load
-        backgroundImage.onload = () => {
-            console.log("Background image loaded");  // Add a console log to check if the background image loads
-            spriteImage.onload = () => {
-                console.log("Sprite image loaded");      // Add a console log to check if the sprite image loads
-                gameLoop();
-            };
-        };
+        // Start the game loop
+        gameLoop();
     </script>
 </body>
 </html>
