added spacebar key event

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -14,7 +14,7 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Flip or Freeze!</title>
+    <title>Freeplay Minigame!</title>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
@@ -35,7 +35,7 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         const spriteWidth = 96; // Width of a single sprite frame
         const spriteHeight = 104; // Height of a single sprite frame
         let currentFrame = 0; // Current frame index
-        let frameCount = 3; // Total number of frames in the sprite sheet
+        let frameCount = 2; // Total number of frames in the sprite sheet
 
         // Initial sprite position and velocity
         let spriteX = 100;
@@ -51,6 +51,21 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         function updateSpriteAnimation() {
             currentFrame = (currentFrame + 1) % frameCount;
         }
+
+        // Function to handle jumping when spacebar is pressed
+        function jump() {
+            if (!isJumping) {
+                spriteVelocityY = jumpStrength;
+                isJumping = true;
+            }
+        }
+
+        // Event listener for spacebar key press
+        window.addEventListener('keydown', (event) => {
+            if (event.key === ' ') {
+                jump();
+            }
+        });
 
         // Game loop
         function gameLoop() {
@@ -83,12 +98,6 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
                 spriteWidth, // Width of the frame when drawn on the canvas
                 spriteHeight // Height of the frame when drawn on the canvas
             );
-
-            // Handle jumping
-            if (!isJumping) {
-                spriteVelocityY = jumpStrength;
-                isJumping = true;
-            }
 
             // Update sprite animation
             updateSpriteAnimation();
