added right arrow key event

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -27,20 +27,25 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         const backgroundImage = new Image();
         backgroundImage.src = '/student/images/park.jpg';
 
-        // Load the sprite image
-        const spriteImage = new Image();
-        spriteImage.src = '/student/images/linksprites.png';
+        // Load the sprite image for jumping
+        const jumpSpriteImage = new Image();
+        jumpSpriteImage.src = '/student/images/jump-sprites.png';
+
+        // Load the sprite image for moving right
+        const moveRightSpriteImage = new Image();
+        moveRightSpriteImage.src = '/student/images/move-right-sprites.png';
 
         // Define sprite properties
         const spriteWidth = 96; // Width of a single sprite frame
         const spriteHeight = 104; // Height of a single sprite frame
         let currentFrame = 0; // Current frame index
-        let frameCount = 2; // Total number of frames in the sprite sheet
+        let frameCount = 3; // Total number of frames in the sprite sheet
 
         // Initial sprite position and velocity
         let spriteX = 100;
         let spriteY = canvas.height - spriteHeight;
         let spriteVelocityY = 0;
+        let spriteVelocityX = 0; // Velocity for horizontal movement
 
         // Constants for jump behavior
         const gravity = 0.5;
@@ -60,10 +65,20 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
             }
         }
 
-        // Event listener for spacebar key press
+        // Function to handle moving right
+        function moveRight() {
+            spriteVelocityX = 2; // Adjust the horizontal velocity as needed
+            // You can set sprite coordinates for the move-right sprite here
+            // spriteX = 4;
+            // spriteY = 7;
+        }
+
+        // Event listeners for spacebar key press and right arrow key press
         window.addEventListener('keydown', (event) => {
             if (event.key === ' ') {
                 jump();
+            } else if (event.key === 'ArrowRight') {
+                moveRight();
             }
         });
 
@@ -75,9 +90,10 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
             // Draw the background image
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
 
-            // Update the sprite position based on gravity
+            // Update the sprite position based on gravity and horizontal velocity
             spriteVelocityY += gravity;
             spriteY += spriteVelocityY;
+            spriteX += spriteVelocityX;
 
             // Check if the sprite has landed
             if (spriteY >= canvas.height - spriteHeight) {
@@ -86,17 +102,18 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
                 isJumping = false;
             }
 
-            // Draw the current sprite frame
+            // Draw the current sprite frame based on the sprite image
+            const currentSpriteImage = isJumping ? jumpSpriteImage : moveRightSpriteImage;
             ctx.drawImage(
-                spriteImage,
-                currentFrame * spriteWidth, // Adjust the X-coordinate of the frame within the sprite sheet
-                0, // The Y-coordinate within the sprite sheet (assuming Y is always 0 for frames)
-                spriteWidth, // Width of the frame
-                spriteHeight, // Height of the frame
-                spriteX, // X-coordinate where the frame is drawn on the canvas
-                spriteY, // Y-coordinate where the frame is drawn on the canvas
-                spriteWidth, // Width of the frame when drawn on the canvas
-                spriteHeight // Height of the frame when drawn on the canvas
+                currentSpriteImage,
+                currentFrame * spriteWidth,
+                0,
+                spriteWidth,
+                spriteHeight,
+                spriteX,
+                spriteY,
+                spriteWidth,
+                spriteHeight
             );
 
             // Update sprite animation
