fixed no sprites showing up

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -14,7 +14,7 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Freeplay Minigame!</title>
+    <title>Flip or Freeze!</title>
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
@@ -27,13 +27,9 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         const backgroundImage = new Image();
         backgroundImage.src = '/student/images/park.jpg';
 
-        // Load the sprite image for jumping
-        const jumpSpriteImage = new Image();
-        jumpSpriteImage.src = '/student/images/jump-sprites.png';
-
-        // Load the sprite image for moving right
-        const moveRightSpriteImage = new Image();
-        moveRightSpriteImage.src = '/student/images/move-right-sprites.png';
+        // Load the sprite image
+        const spriteImage = new Image();
+        spriteImage.src = '/student/images/linksprites.png';
 
         // Define sprite properties
         const spriteWidth = 96; // Width of a single sprite frame
@@ -45,7 +41,6 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         let spriteX = 100;
         let spriteY = canvas.height - spriteHeight;
         let spriteVelocityY = 0;
-        let spriteVelocityX = 0; // Velocity for horizontal movement
 
         // Constants for jump behavior
         const gravity = 0.5;
@@ -65,20 +60,10 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
             }
         }
 
-        // Function to handle moving right
-        function moveRight() {
-            spriteVelocityX = 2; // Adjust the horizontal velocity as needed
-            // You can set sprite coordinates for the move-right sprite here
-            // spriteX = 4;
-            // spriteY = 7;
-        }
-
-        // Event listeners for spacebar key press and right arrow key press
+        // Event listener for spacebar key press
         window.addEventListener('keydown', (event) => {
             if (event.key === ' ') {
                 jump();
-            } else if (event.key === 'ArrowRight') {
-                moveRight();
             }
         });
 
@@ -90,10 +75,9 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
             // Draw the background image
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
 
-            // Update the sprite position based on gravity and horizontal velocity
+            // Update the sprite position based on gravity
             spriteVelocityY += gravity;
             spriteY += spriteVelocityY;
-            spriteX += spriteVelocityX;
 
             // Check if the sprite has landed
             if (spriteY >= canvas.height - spriteHeight) {
@@ -102,18 +86,17 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
                 isJumping = false;
             }
 
-            // Draw the current sprite frame based on the sprite image
-            const currentSpriteImage = isJumping ? jumpSpriteImage : moveRightSpriteImage;
+            // Draw the current sprite frame
             ctx.drawImage(
-                currentSpriteImage,
-                currentFrame * spriteWidth,
-                0,
-                spriteWidth,
-                spriteHeight,
-                spriteX,
-                spriteY,
-                spriteWidth,
-                spriteHeight
+                spriteImage,
+                currentFrame * spriteWidth, // Adjust the X-coordinate of the frame within the sprite sheet
+                0, // The Y-coordinate within the sprite sheet (assuming Y is always 0 for frames)
+                spriteWidth, // Width of the frame
+                spriteHeight, // Height of the frame
+                spriteX, // X-coordinate where the frame is drawn on the canvas
+                spriteY, // Y-coordinate where the frame is drawn on the canvas
+                spriteWidth, // Width of the frame when drawn on the canvas
+                spriteHeight // Height of the frame when drawn on the canvas
             );
 
             // Update sprite animation
