added randomly generated platforms

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -10,13 +10,15 @@ courses: { compsci: {week: 7} }
 
 <canvas id="canvas" width="500" height="700"></canvas>
 <script>
-    //create empty canvas
+    // Create empty canvas
     let canvas = document.getElementById("canvas");
     let c = canvas.getContext("2d");
+
+    // Load background image
     var bgImage = new Image();
     bgImage.src = "{{site.baseurl}}/images/Stone_Background.jpg";
     bgImage.onload = function () {
-        //set up backgrounds
+        // Set up backgrounds
         var bg1 = {
             width: 500,
             height: 1000,
@@ -35,10 +37,32 @@ courses: { compsci: {week: 7} }
             x: 0,
             y: -2000
         }
-        var interval = setInterval(function() {
-            bg1.y +=5;
-            bg2.y +=5;
-            bg3.y +=5;
+
+        // Create an array to hold platform information
+        var platforms = [];
+
+        // Function to generate random platforms
+        function generateRandomPlatform() {
+            // Define the platform properties, adjust these as needed
+            var platform = {
+                width: 100,
+                height: 10,
+                x: Math.random() * (canvas.width - 100),
+                y: -50 // Start platforms off-screen
+            };
+            platforms.push(platform);
+        }
+
+        // Call the platform generation function at regular intervals
+        setInterval(generateRandomPlatform, 3000); // Adjust the interval as needed
+
+        // Main game loop
+        var interval = setInterval(function () {
+            // Move the backgrounds
+            bg1.y += 5;
+            bg2.y += 5;
+            bg3.y += 5;
+
             if (bg1.y == 2000) {
                 bg1.y = 0;
             }
@@ -48,9 +72,26 @@ courses: { compsci: {week: 7} }
             if (bg3.y == 0) {
                 bg3.y = -2000;
             }
-            c.drawImage(bgImage, bg1.x, bg1.y)
-            c.drawImage(bgImage, bg2.x, bg2.y)
-            c.drawImage(bgImage, bg3.x, bg3.y)
+
+            // Clear the canvas
+            c.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw the background
+            c.drawImage(bgImage, bg1.x, bg1.y);
+            c.drawImage(bgImage, bg2.x, bg2.y);
+            c.drawImage(bgImage, bg3.x, bg3.y);
+
+            // Move and draw the platforms
+            platforms.forEach(function (platform) {
+                platform.y += 5; // Adjust the platform's speed
+                c.fillStyle = "brown"; // Change the color to match your platform
+                c.fillRect(platform.x, platform.y, platform.width, platform.height);
+
+                // Remove platforms that are off-screen
+                if (platform.y > canvas.height) {
+                    platforms.splice(platforms.indexOf(platform), 1);
+                }
+            });
         }, 50);
     };
 </script>
