--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -43,11 +43,11 @@ courses: { compsci: {week: 7} }
 
         // Function to generate random platforms
         function generateRandomPlatform() {
-            // Define the platform properties, adjust these as needed
+            // Define the platform properties
             var platform = {
-                width: 100,
-                height: 10,
-                x: Math.random() * (canvas.width - 100),
+                width: 150, // Increased width
+                height: 20, // Increased height
+                x: Math.random() * (canvas.width - 150), // Adjusted width
                 y: -50 // Start platforms off-screen
             };
             platforms.push(platform);
@@ -84,7 +84,7 @@ courses: { compsci: {week: 7} }
             // Move and draw the platforms
             platforms.forEach(function (platform) {
                 platform.y += 5; // Adjust the platform's speed
-                c.fillStyle = "brown"; // Change the color to match your platform
+                c.fillStyle = "yellow"; // Changed platform color to yellow
                 c.fillRect(platform.x, platform.y, platform.width, platform.height);
 
                 // Remove platforms that are off-screen
