updates to link animation and minigame

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -22,36 +22,32 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         // Get the canvas and its 2D rendering context
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
-
         // Load the background image
         const backgroundImage = new Image();
         backgroundImage.src = '/student/images/park.jpg';
-
         // Load the sprite image
         const spriteImage = new Image();
         spriteImage.src = '/student/images/linksprites.png';
-
         // Define sprite properties
         const spriteWidth = 96; // Width of a single sprite frame
         const spriteHeight = 104; // Height of a single sprite frame
         let currentFrame = 0; // Current frame index
         let frameCount = 3; // Total number of frames in the sprite sheet
-
         // Initial sprite position and velocity
         let spriteX = 100;
         let spriteY = canvas.height - spriteHeight;
         let spriteVelocityY = 0;
-
         // Constants for jump behavior
         const gravity = 0.5;
         const jumpStrength = -10;
         let isJumping = false;
-
+        // Constants for left and right behavior
+        let isMovingLeft = false;
+        let isMovingRight = false;
         // Function to update sprite animation
         function updateSpriteAnimation() {
             currentFrame = (currentFrame + 1) % frameCount;
         }
-
         // Function to handle jumping when spacebar is pressed
         function jump() {
             if (!isJumping) {
@@ -59,33 +55,58 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
                 isJumping = true;
             }
         }
-
-        // Event listener for spacebar key press
+        // Function to handle moving left when a is pressed
+        function moveLeft() {
+            if (!isMovingLeft) {
+                isMovingLeft = true;
+            }
+        }
+        // Function to handle moving right when d is pressed
+        function moveRight() {
+            if (!isMovingRight) {
+                isMovingRight = true;
+            }
+        }
+        // Event listener for key downs
         window.addEventListener('keydown', (event) => {
             if (event.key === ' ') {
                 jump();
+            } else if (event.key === 'a') {
+                moveLeft();
+            } else if (event.key === 'd') {
+                moveRight();
             }
         });
-
+        // Event listener for key ups
+        window.addEventListener('keyup', (event) => {
+            if (event.key === 'a') {
+                isMovingLeft = false;
+            } else if (event.key === 'd') {
+                isMovingRight = false;
+            }
+        })
         // Game loop
         function gameLoop() {
             // Clear the canvas
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-
             // Draw the background image
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
-
+            // Update sprite position based on key down left and right
+            if (isMovingLeft) {
+                spriteX -= 5;
+            }
+            if (isMovingRight) {
+                spriteX += 5;
+            }
             // Update the sprite position based on gravity
             spriteVelocityY += gravity;
             spriteY += spriteVelocityY;
-
             // Check if the sprite has landed
             if (spriteY >= canvas.height - spriteHeight) {
                 spriteY = canvas.height - spriteHeight;
                 spriteVelocityY = 0;
                 isJumping = false;
             }
-
             // Draw the current sprite frame
             ctx.drawImage(
                 spriteImage,
@@ -98,13 +119,11 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
                 spriteWidth, // Width of the frame when drawn on the canvas
                 spriteHeight // Height of the frame when drawn on the canvas
             );
-
             // Update sprite animation
             updateSpriteAnimation();
-
+            // Keeps loop running
             requestAnimationFrame(gameLoop);
         }
-
         // Start the game loop
         gameLoop();
     </script>
