updated file location

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -24,10 +24,10 @@ Freeplay with Link! Use the right arrow to make him move right, use the left arr
         const ctx = canvas.getContext('2d');
         // Load the background image
         const backgroundImage = new Image();
-        backgroundImage.src = '/student/images/park.jpg';
+        backgroundImage.src = '{{site.baseurl}}/images/park.jpg';
         // Load the sprite image
         const spriteImage = new Image();
-        spriteImage.src = '/student/images/linksprites.png';
+        spriteImage.src = '{{site.baseurl}}/images/linksprites.png';
         // Define sprite properties
         const spriteWidth = 96; // Width of a single sprite frame
         const spriteHeight = 104; // Height of a single sprite frame
