fixed controls for minigame

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -9,7 +9,7 @@ comments: True
 ---
 
 **Directions**  
-Freeplay with Link! Use the right arrow to make him move right, use the left arrow to make him move left, and use the space bar to jump.  
+Freeplay with Link! Use "D" to make him move right, use the "A" to make him move left, and use the space bar to jump.  
 
 <!DOCTYPE html>
 <html>
