added movent animations to movement

--- a/_posts/2023-10-11-minigame.md
+++ b/_posts/2023-10-11-minigame.md
@@ -31,8 +31,6 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
         // Define sprite properties
         const spriteWidth = 96; // Width of a single sprite frame
         const spriteHeight = 104; // Height of a single sprite frame
-        let currentFrame = 0; // Current frame index
-        let frameCount = 3; // Total number of frames in the sprite sheet
         // Initial sprite position and velocity
         let spriteX = 100;
         let spriteY = canvas.height - spriteHeight;
@@ -42,11 +40,18 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
         const jumpStrength = -10;
         let isJumping = false;
         // Constants for left and right behavior
+        let frameX = 0;
+        let frameY = 0;
+        let maxFrame = 2;
         let isMovingLeft = false;
         let isMovingRight = false;
         // Function to update sprite animation
         function updateSpriteAnimation() {
-            currentFrame = (currentFrame + 1) % frameCount;
+            if (frameX < maxFrame) {
+                frameX++;
+            } else {
+                frameX = 0;
+            }
         }
         // Function to handle jumping when spacebar is pressed
         function jump() {
@@ -57,15 +62,21 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
         }
         // Function to handle moving left when a is pressed
         function moveLeft() {
-            if (!isMovingLeft) {
-                isMovingLeft = true;
-            }
+            isMovingLeft = true;
+            frameY = 5;
+            maxFrame = 9;
         }
         // Function to handle moving right when d is pressed
         function moveRight() {
-            if (!isMovingRight) {
-                isMovingRight = true;
-            }
+            isMovingRight = true;
+            frameY = 7;
+            maxFrame = 9;
+        }
+        // Function to handle idle
+        function idle() {
+            isIdle = true;
+            frameY = 0;
+            maxFrame = 2;
         }
         // Event listener for key downs
         window.addEventListener('keydown', (event) => {
@@ -75,17 +86,22 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
                 moveLeft();
             } else if (event.key === 'd') {
                 moveRight();
+            } else {
+                idle();
             }
         });
         // Event listener for key ups
         window.addEventListener('keyup', (event) => {
             if (event.key === 'a') {
+                idle();
                 isMovingLeft = false;
             } else if (event.key === 'd') {
+                idle();
                 isMovingRight = false;
             }
         })
         // Game loop
+        let framesPerSecond = 30;
         function gameLoop() {
             // Clear the canvas
             ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -93,10 +109,10 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
             // Update sprite position based on key down left and right
             if (isMovingLeft) {
-                spriteX -= 5;
+                spriteX -= 10;
             }
             if (isMovingRight) {
-                spriteX += 5;
+                spriteX += 10;
             }
             // Update the sprite position based on gravity
             spriteVelocityY += gravity;
@@ -110,8 +126,8 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
             // Draw the current sprite frame
             ctx.drawImage(
                 spriteImage,
-                currentFrame * spriteWidth, // Adjust the X-coordinate of the frame within the sprite sheet
-                0, // The Y-coordinate within the sprite sheet (assuming Y is always 0 for frames)
+                frameX * spriteWidth, // Adjust the X-coordinate of the frame within the sprite sheet
+                frameY * spriteHeight, // The Y-coordinate within the sprite sheet (assuming Y is always 0 for frames)
                 spriteWidth, // Width of the frame
                 spriteHeight, // Height of the frame
                 spriteX, // X-coordinate where the frame is drawn on the canvas
@@ -122,9 +138,10 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
             // Update sprite animation
             updateSpriteAnimation();
             // Keeps loop running
+            setTimeout(function() {
             requestAnimationFrame(gameLoop);
+            }, 1000 / framesPerSecond);
         }
-        // Start the game loop
         gameLoop();
     </script>
 </body>
