fixed platform spawn placement

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -45,14 +45,14 @@ courses: { compsci: {week: 7} }
         const gravity = 0.5;
         const jumpStrength = -10;
 
-        // Function to generate random platforms
+        // Function to generate random platforms within the middle of the canvas
         function generateRandomPlatform() {
             // Define the platform properties
             var platform = {
                 width: 150,
                 height: 20,
                 x: Math.random() * (canvas.width - 150),
-                y: canvas.height - Math.random() * (canvas.height / 3)  // Platforms appear at various vertical positions
+                y: canvas.height / 2 + Math.random() * (canvas.height / 6)  // Platforms appear in the middle
             };
             platforms.push(platform);
         }
@@ -108,6 +108,6 @@ courses: { compsci: {week: 7} }
                 c.fillStyle = "yellow";
                 c.fillRect(platform.x, platform.y, platform.width, platform.height);
             });
-        }, 50);
+        }, 70);
     };
 </script>
