optimal platform spawn placement

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -45,14 +45,14 @@ courses: { compsci: {week: 7} }
         const gravity = 0.5;
         const jumpStrength = -10;
 
-        // Function to generate random platforms within the middle of the canvas
+        // Function to generate random platforms throughout the screen
         function generateRandomPlatform() {
             // Define the platform properties
             var platform = {
                 width: 150,
                 height: 20,
                 x: Math.random() * (canvas.width - 150),
-                y: canvas.height / 2 + Math.random() * (canvas.height / 6)  // Platforms appear in the middle
+                y: canvas.height - Math.random() * (canvas.height)  // Platforms appear at various vertical positions
             };
             platforms.push(platform);
         }
