changed trampolines to cyan

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -128,7 +128,7 @@ courses: { compsci: {week: 7} }
             platforms.forEach(function (platform) {
                 if (platform.width === 20) {
                     // Draw a green line for the trampoline
-                    c.strokeStyle = "green";
+                    c.strokeStyle = "cyan";
                     c.lineWidth = 5;
                     c.beginPath();
                     c.moveTo(platform.x, platform.y + 5);
