added platforms to bottom

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -90,6 +90,28 @@ courses: { compsci: {week: 7} }
             }
         }
 
+        // function to generate platforms at bottom of screen
+        function generateBottomPlatform() {
+            var platform = {
+                width: 150,
+                height: 20,
+                x: Math.random() * (canvas.width - 150),
+                y: canvas.height + 20
+            };
+            platforms.push(platform);
+
+            // add trampoline on some platforms randomly
+            if (Math.random() < 0.2) { // Adjust probability as needed
+                var trampoline = {
+                    x: platform.x + platform/width / 2 - 10, // Adjust for trampoline width
+                    y: platform.y - 10, // Adjust for trampoline height
+                    width: 20, // Adjust to match trampoline width
+                    height: 5, // Adjust to match trampoline height
+                };
+                platforms.push(trampoline);
+            }
+        }
+
         // Call the platform generation function initially to ensure a platform is within jumping distance
         generateRandomPlatform();
 
